Añadir ruta temporal para columna activo

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -114,7 +114,7 @@
             labels: Object.keys(niveles),
             datasets: [{
                 label: 'Número de Visitas',
-                 Object.values(niveles),
+                data: Object.values(niveles),
                 backgroundColor: '#007bff'
             }]
         },
