--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -34,6 +34,14 @@
     </div>
 </div>
 
+<!-- Botón de informe mensual -->
+<div class="row mb-4">
+    <div class="col-md-12 text-end">
+        <a href="{{ url_for('generar_informe_mensual', mes='2025-10') }}" class="btn btn-primary">
+            📄 Generar Informe Mensual (Octubre 2025)
+        </a>
+    </div>
+</div>
 <!-- Gráficos -->
 <div class="row mb-4">
     <div class="col-md-6">
