Corregir boton de informe mensual

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -26,7 +26,7 @@
         </select>
     </div>
     <div class="col-md-8 d-flex align-items-end">
-        <a id="btnGenerarInforme" href="#" class="btn btn-primary w-100">
+        <a id="btnGenerarInforme" href="/generar_informe_mensual/todos" class="btn btn-primary w-100">
             📄 Generar Informe Mensual ({{ 'Todos los meses' if not mes_filtro else mes_filtro }})
         </a>
     </div>
