--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,8 @@
         overflow-y: auto;
     }
 </style>
+<!-- Font Awesome para íconos -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <div class="header d-flex align-items-center w-100 px-4 py-2">
